--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,9 @@ config/smtp.yml
 # reCAPTCHA config
 config/recaptcha.yml
 
+# http:BL config
+config/httpbl.yml
+
 # Ignore old capistrano config backup
 /old_cap
 
